Fix alignment on mobile

--- a/_src/sass/styles.scss
+++ b/_src/sass/styles.scss
@@ -23,6 +23,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 32px);
-    padding: 16px;
+    height: 100vh;
+    width: 100vw;
 }
